--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,13 +3,13 @@
     x:Class="PrepersSupplies.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:PrepersSupplies"
+    xmlns:pages="clr-namespace:PrepersSupplies.Pages"
     Shell.FlyoutItemIsVisible="False"
     Shell.NavBarIsVisible="False"
     Title="PrepersSupplies">
 
     <ShellContent
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
 
 </Shell>
